--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
     "@material/textfield": "^3.2.0",
+    "mixin-deep": "^1.3.2",
     "node-forge": "^0.9.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-input-mask": "^3.0.0-alpha.0",
     "react-scripts": "3.2.0",
     "set-value": "^2.0.1",
-    "typeface-roboto": "0.0.75",
-    "mixin-deep": "^1.3.2"
+    "typeface-roboto": "0.0.75"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "react-snapshot": "^1.3.0"
+    "react-snapshot": "^1.3.0",
+    "static-site-generator-webpack-plugin": "^3.4.2"
   }
 }
